# xiaohongshu-smart-gen

./: .gitignore  LICENSE  README.md  README_PYTHON.md  SKILL.md  persona.md  pyproject.toml  run_tests.py  xhs_gen.py
demo/: README.md
hooks/: TELEGRAM_USAGE.md  telegram_handler.sh  xhs_do.sh
lib/: __init__.py  image_gen.py  pipeline.py  session.py  steps.py  validate.py
personas/: beauty.md  finance.md  stock.md  tech.md  wallpaper.md
scripts/: add_overlay.sh  ai_image_search.py  ai_search_images.sh  bootstrap_vertical.py  check.sh  config_parser.py  generate_content_advanced.py  generate_content_strict.py  generate_cover.sh  install.sh  persona_applier.py  send_telegram.sh  session_generate_content.sh  session_generate_content.sh.bak  session_generate_cover.sh  session_info.sh  session_init.sh  session_search_images.sh  xhs_do.py  xhs_gen.py  xhs_generate.sh
scripts/lib/: add_logo.py  build_dynamic_cover_prompt.py  build_prompt.py  image_gen.py  pipeline.py  session.py  steps.py  validate.py
scripts/xhs_cli/: cli.py
scripts/xhs_cli/core/: images.py  session.py  telegram.py
templates/: content.json  content_prompt.txt
tests/: README.md  conftest.py  test_cli.py  test_config.py  test_content.py  test_cover.py  test_entry_points.py  test_fonts.py  test_images.py  test_paths.py  test_session.py  test_telegram.py
verticals/: beauty.json  finance.json  stock.json  tech.json  wallpaper.json
